Change presentation page title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>reveal.js</title>
+    <title>Music Synthesis in JavaScript</title>
 
     <link rel="stylesheet" href="reveal.js/css/reset.css" />
     <link rel="stylesheet" href="reveal.js/css/reveal.css" />
