Hide first slide number

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <!-- Printing and PDF exports -->
     <script>
-      var link = document.createElement("link");
-      link.rel = "stylesheet";
-      link.type = "text/css";
+      var link = document.createElement('link')
+      link.rel = 'stylesheet'
+      link.type = 'text/css'
       link.href = window.location.search.match(/print-pdf/gi)
-        ? "reveal.js/css/print/pdf.css"
-        : "reveal.js/css/print/paper.css";
-      document.getElementsByTagName("head")[0].appendChild(link);
+        ? 'reveal.js/css/print/pdf.css'
+        : 'reveal.js/css/print/paper.css'
+      document.getElementsByTagName('head')[0].appendChild(link)
     </script>
   </head>
   <body>
@@ -42,15 +42,15 @@
       // - https://github.com/hakimel/reveal.js#dependencies
       Reveal.initialize({
         controls: false,
-        slideNumber: true,
+        slideNumber: () => [Reveal.getIndices().h || ''],
         hash: true,
         dependencies: [
-          { src: "reveal.js/plugin/markdown/marked.js" },
-          { src: "reveal.js/plugin/markdown/markdown.js" },
-          { src: "reveal.js/plugin/notes/notes.js", async: true },
-          { src: "reveal.js/plugin/highlight/highlight.js", async: true }
-        ]
-      });
+          { src: 'reveal.js/plugin/markdown/marked.js' },
+          { src: 'reveal.js/plugin/markdown/markdown.js' },
+          { src: 'reveal.js/plugin/notes/notes.js', async: true },
+          { src: 'reveal.js/plugin/highlight/highlight.js', async: true },
+        ],
+      })
     </script>
   </body>
 </html>
