Init custom css theme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="reveal.js/css/reset.css" />
     <link rel="stylesheet" href="reveal.js/css/reveal.css" />
-    <link rel="stylesheet" href="reveal.js/css/theme/black.css" />
+    <link rel="stylesheet" href="css/theme/black.css" />
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="reveal.js/lib/css/monokai.css" />
