--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="reveal.js/css/reset.css" />
     <link rel="stylesheet" href="reveal.js/css/reveal.css" />
-    <link rel="stylesheet" href="css/criteo.css" />
+    <link rel="stylesheet" href="css/theme/light.css" />
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="reveal.js/lib/css/monokai.css" />
@@ -28,7 +28,7 @@
     </script>
   </head>
   <body>
-    <div class="reveal criteo">
+    <div class="reveal">
       <div class="slides">
         <section data-markdown="slides.md"></section>
       </div>
