--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section data-markdown="slides.md"></section>
+        <section
+          data-markdown="slides.md"
+          data-separator-vertical="^¨¨¨"
+        ></section>
       </div>
     </div>
 
