Update styles and init workshop tutorial

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="slides">
         <section
           data-markdown="slides.md"
-          data-separator-vertical="^¨¨¨"
+          data-separator-vertical="^--"
         ></section>
       </div>
     </div>
