Simplify oscillator demo

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <section
           data-markdown="slides.md"
           data-separator-vertical="^--"
+          data-separator-notes="^Notes?:"
         ></section>
       </div>
     </div>
