Refactor demo tracks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section
           data-markdown="slides.md"
           data-separator-vertical="^--"
-          data-separator-notes="^Notes?:"
+          data-separator-notes="^Speaker notes:"
         ></section>
       </div>
     </div>
